Revert "fix: allow Concept Compare screen to scroll when content overflows"
This reverts commit 808ae7c5b1a9ba22d160de3f16781bf96fae15d5.

--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -2,8 +2,7 @@ main.content {
     display: inline-block;
     width: 100%;
     height: calc(100vh - 95px);
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: hidden;
 }
 div.rounded-input {
     border-radius: 100px;
